tests/common/snapshots/cramfs__common__tests__cramfs.rs-7-5_file_map.snap
---
source: tests/common/mod.rs
expression: results.file_map
---
- offset: 0
  id: "[uuid]"
  size: 221184
  name: cramfs
  confidence: 250
  description: "CramFS filesystem, Little Endian, 5 files, total size: 221184 bytes"
  always_display: false
  extraction_declined: false
