tests/common/snapshots/cramfs__common__tests__cramfs.rs-7-5_ordered_extractions.snap
---
source: tests/common/mod.rs
expression: ordered_extractions
---
- size: ~
  success: true
  extractor: 7z
  do_not_recurse: false
  output_directory: "[output_directory]"
