tests/common/snapshots/cramfs__common__tests__cramfs.rs:7:5_file_map.snap
---
source: tests/common/mod.rs
expression: results.file_map
---
- offset: 0
  id: "[uuid]"
  size: 4096
  name: cramfs
  confidence: 250
  description: "CramFS filesystem, little endian, 2 files, total size: 4096 bytes"
  always_display: false
  extraction_declined: false
